--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -244,7 +244,6 @@ main{
 // Add custom overflow to mobile table
 .nl-mob-table {
   max-height: 38rem;
-  overflow: scroll;
 }
 
 /* Page headings
