--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -307,6 +307,10 @@
   td, th {
     padding: 0.25rem 0.25rem;
 
+    @include respond-to (wide-tablets) {
+      padding: 0.5rem 0.25rem;
+    }
+
     &:first-child {
       padding-left: 0.5rem;
     }
